# f1-ticker

./: hello.lkshs  hello.lkshw
F1TickerClient/: F1TickerClient.cabal
F1TickerClient/src/: hello.hs
RTLParser/: RTLParser.cabal
RTLParser/src/: Main.hs  RTLParser.hs
ZMQServer/: ZMQServer.cabal  ZMQServer.cabal~
ZMQServer/src/: Main.hs  Main.hs~
