name: RTLParser
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description:
data-dir: ""

executable RTLParser
    build-depends:
      QuickCheck -any,
      base -any,
      bytestring -any,
      tagsoup -any,
      HTTP
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
